Fix table row z-index bug

--- a/imis-plus.css
+++ b/imis-plus.css
@@ -1,3 +1,10 @@
+/* IQA Editor Styles */
+
+#MainPanel table.csi__iep__customsql
+{
+    z-index: 9995;
+}
+
 /* RiSE Content Editor Styles */
 
 #MainPanel.__csi__iep__rise .__csi__iep__addButton
